Fix padding issue for product details on mobile (right sidebar layouts)

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -400,7 +400,9 @@
   .product-details
     order: 1
     padding-left: 0
-    padding-right: $base-padding * 2
+
+    @media screen and (min-width: $break-small + 1)
+      padding-right: $base-padding * 2
 
 .description-inventory-tabs
   +flexbox
