--- a/source/stylesheets/quickshop.sass
+++ b/source/stylesheets/quickshop.sass
@@ -144,8 +144,3 @@
           height: 100%
           position: relative
           width: 20%
-
-
-@media screen and (max-width: $break-product-details)
-  .qs-product-details .product-details
-    padding-right: 0
